--- a/css/common.css
+++ b/css/common.css
@@ -30,38 +30,6 @@ header nav .nav .infoNews ul, header nav {
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out; }
 
-header nav .logo, footer .descripe .top .container .Mleft, footer .descripe .top .container .Mright, footer .technology .container p:first-child {
-  float: left; }
-
-header nav .nav, footer .technology .container p:last-child {
-  float: right; }
-
-header nav, footer .descripe .top .container, footer .technology .container {
-  *height: 1%;
-  *height: auto !important; }
-  header nav:after, footer .descripe .top .container:after, footer .technology .container:after {
-    clear: both;
-    content: '.';
-    display: block;
-    height: 0;
-    line-height: 0;
-    font-size: 0;
-    overflow: hidden; }
-
-.container {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  -o-box-sizing: border-box;
-  box-sizing: border-box; }
-
-header nav .nav .infoNews ul, header nav {
-  transition: all 0.5s ease-in-out;
-  -moz-transition: all 0.5s ease-in-out;
-  -o-transition: all 0.5s ease-in-out;
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out; }
-
 .container {
   width: 100%;
   max-width: 1180px;
@@ -195,66 +163,4 @@ footer .technology {
   footer .technology .container p {
     color: #fff; }
 
-.banner a, .banner img {
-  display: inline-block;
-  width: 100%; }
-
-.swiper-container {
-  width: 100%;
-  height: 250px;
-  color: #fff;
-  text-align: center; }
-
-.swiper-wrapper {
-  box-sizing: border-box; }
-
-.swiper-slide .title {
-  font-style: italic;
-  font-size: 42px;
-  margin-top: 80px;
-  margin-bottom: 0;
-  line-height: 45px; }
-
-.swiper-slide p {
-  font-style: italic;
-  font-size: 25px; }
-
-.pagination {
-  position: absolute;
-  padding-left: 20%;
-  z-index: 20;
-  left: 10px;
-  top: 10px; }
-
-.swiper-pagination-switch {
-  display: block;
-  width: 22px;
-  height: 6px;
-  background: #d2b701;
-  margin: 0 0 5px;
-  opacity: 0.8;
-  cursor: pointer; }
-
-.pagination {
-  position: absolute;
-  z-index: 20;
-  bottom: 10px;
-  width: 100%;
-  height: 10px;
-  text-align: center; }
-
-.swiper-pagination-switch {
-  display: inline-block;
-  width: 22px;
-  height: 6px;
-  background: #fff;
-  margin: 0 5px;
-  opacity: 0.8;
-  cursor: pointer; }
-
-.swiper-active-switch {
-  background: #d2b701;
-  opacity: 0.9;
-  filter: alpha(opacity=90); }
-
-/*# sourceMappingURL=index.css.map */
+/*# sourceMappingURL=common.css.map */
