--- a/css/sassFn.scss
+++ b/css/sassFn.scss
@@ -1,5 +1,6 @@
 @charset "utf-8";
-
+$legacy-support-for-ie: true;
+$filter:true;
 
 
 %width100{
@@ -76,16 +77,23 @@
 
 
 %transition{
-    transition: all 1s ease-in-out;
-    -moz-transition: all 1s ease-in-out;
-    -o-transition: all 1s ease-in-out;
-    -webkit-transition: all 1s ease-in-out;
-    transition: all 1s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    -webkit-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
 }
 
 @mixin common-title-color($bgColor){
     background-color:$bgColor;
     color:#fff;
+}
+
+@mixin opacity($opacity:50) {
+    opacity: $opacity / 100;
+    @if $filter{
+        filter: alpha(opacity=$opacity);
+    }
 }
 
 
