--- a/css/index.css
+++ b/css/index.css
@@ -1,13 +1,13 @@
-header nav .logo, footer .descripe .top .container .Mleft, footer .descripe .top .container .Mright, footer .technology .container p:first-child {
+header nav .logo, footer .descripe .top .container .Mleft, footer .descripe .top .container .Mright, footer .technology .container p:first-child, .huiFaPreduct ul li, .news .container .tap li, .news .container .newsNum .newsList {
   float: left; }
 
-header nav .nav, footer .technology .container p:last-child {
+header nav .nav, footer .technology .container p:last-child, .news .container .newsNum .newsList div div {
   float: right; }
 
-header nav, footer .descripe .top .container, footer .technology .container {
+header nav, footer .descripe .top .container, footer .technology .container, .aboutHuifa .Word, .huiFaPreduct ul, .news .container .tap, .news .container .newsNum, .news .container .newsNum .newsList div {
   *height: 1%;
   *height: auto !important; }
-  header nav:after, footer .descripe .top .container:after, footer .technology .container:after {
+  header nav:after, footer .descripe .top .container:after, footer .technology .container:after, .aboutHuifa .Word:after, .huiFaPreduct ul:after, .news .container .tap:after, .news .container .newsNum:after, .news .container .newsNum .newsList div:after {
     clear: both;
     content: '.';
     display: block;
@@ -16,30 +16,30 @@ header nav, footer .descripe .top .container, footer .technology .container {
     font-size: 0;
     overflow: hidden; }
 
-.container {
+.container, .aboutHuifa .Word .left, .aboutHuifa .Word .right, .aboutHuifa .Word .right img, .news .container .newsNum .newsList {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
   -o-box-sizing: border-box;
   box-sizing: border-box; }
 
-header nav .nav .infoNews ul, header nav {
+header nav .nav .infoNews ul, header nav, .news .container .newsNum .newsList div img {
   transition: all 0.5s ease-in-out;
   -moz-transition: all 0.5s ease-in-out;
   -o-transition: all 0.5s ease-in-out;
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out; }
 
-header nav .logo, footer .descripe .top .container .Mleft, footer .descripe .top .container .Mright, footer .technology .container p:first-child {
+header nav .logo, footer .descripe .top .container .Mleft, footer .descripe .top .container .Mright, footer .technology .container p:first-child, .huiFaPreduct ul li, .news .container .tap li, .news .container .newsNum .newsList {
   float: left; }
 
-header nav .nav, footer .technology .container p:last-child {
+header nav .nav, footer .technology .container p:last-child, .news .container .newsNum .newsList div div {
   float: right; }
 
-header nav, footer .descripe .top .container, footer .technology .container {
+header nav, footer .descripe .top .container, footer .technology .container, .aboutHuifa .Word, .huiFaPreduct ul, .news .container .tap, .news .container .newsNum, .news .container .newsNum .newsList div {
   *height: 1%;
   *height: auto !important; }
-  header nav:after, footer .descripe .top .container:after, footer .technology .container:after {
+  header nav:after, footer .descripe .top .container:after, footer .technology .container:after, .aboutHuifa .Word:after, .huiFaPreduct ul:after, .news .container .tap:after, .news .container .newsNum:after, .news .container .newsNum .newsList div:after {
     clear: both;
     content: '.';
     display: block;
@@ -48,14 +48,14 @@ header nav, footer .descripe .top .container, footer .technology .container {
     font-size: 0;
     overflow: hidden; }
 
-.container {
+.container, .aboutHuifa .Word .left, .aboutHuifa .Word .right, .aboutHuifa .Word .right img, .news .container .newsNum .newsList {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
   -o-box-sizing: border-box;
   box-sizing: border-box; }
 
-header nav .nav .infoNews ul, header nav {
+header nav .nav .infoNews ul, header nav, .news .container .newsNum .newsList div img {
   transition: all 0.5s ease-in-out;
   -moz-transition: all 0.5s ease-in-out;
   -o-transition: all 0.5s ease-in-out;
@@ -73,8 +73,11 @@ html, body {
   height: 100%; }
 
 header {
-  position: relative;
-  z-index: 2;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 21;
   height: 100px;
   font-size: 17px;
   font-weight: 500;
@@ -195,13 +198,54 @@ footer .technology {
   footer .technology .container p {
     color: #fff; }
 
-.banner a, .banner img {
-  display: inline-block;
-  width: 100%; }
+@media (max-width: 930px) {
+  .nav {
+    position: relative !important; }
+    .nav form {
+      position: absolute !important;
+      left: -30px;
+      top: 6px; }
+
+  .navBtn {
+    width: 120px;
+    line-height: 100px;
+    display: block !important;
+    overflow: hidden;
+    text-align: center; }
+    .navBtn img {
+      padding-top: 30px;
+      width: 40px; }
+
+  .navList {
+    height: 0;
+    overflow: hidden;
+    margin-top: -14px;
+    padding: 0 !important;
+    -webkit-transition: 1s all ease !important;
+    transition: 1s all ease !important; }
+    .navList li {
+      width: 120px;
+      padding: 0 !important;
+      text-align: center;
+      background: rgba(255, 255, 255, 0.85);
+      border: 1px solid #bdbdbd;
+      display: block !important;
+      line-height: 50px; }
+    .navList .infoNews ul {
+      top: 0 !important;
+      left: -102% !important;
+      height: 104px; }
+    .navList.active {
+      height: 260px; } }
+.banner {
+  margin-top: 100px; }
+  .banner a, .banner img {
+    display: inline-block;
+    width: 100%; }
 
 .swiper-container {
   width: 100%;
-  height: 250px;
+  height: 450px;
   color: #fff;
   text-align: center; }
 
@@ -256,5 +300,121 @@ footer .technology {
   background: #d2b701;
   opacity: 0.9;
   filter: alpha(opacity=90); }
+
+.aboutHuifa {
+  background: #fdfff7;
+  padding: 70px 0; }
+  .aboutHuifa h2 {
+    margin-bottom: 30px;
+    padding-left: 10px;
+    color: #d2b701;
+    font-size: 28px;
+    border-left: 4px solid #be0000; }
+  .aboutHuifa .Word .left, .aboutHuifa .Word .right {
+    float: left; }
+  .aboutHuifa .Word .left {
+    width: 55%; }
+    .aboutHuifa .Word .left p {
+      text-indent: 36px;
+      font-size: 18px;
+      line-height: 35px; }
+  .aboutHuifa .Word .right {
+    width: 45%; }
+    .aboutHuifa .Word .right img {
+      padding-left: 30px;
+      width: 100%;
+      max-width: 500px; }
+
+.huiFaPreduct {
+  background: url(../images/productBg.png) center no-repeat; }
+  .huiFaPreduct ul li {
+    width: 25%; }
+    .huiFaPreduct ul li img {
+      max-width: 100%; }
+  .huiFaPreduct .container {
+    overflow: hidden; }
+  .huiFaPreduct .swiper-container1 {
+    position: relative;
+    color: #fff;
+    text-align: center; }
+  .huiFaPreduct .swiper-slide {
+    width: 500px;
+    height: 100%; }
+  .huiFaPreduct .swiper-slide .title {
+    font-style: italic;
+    font-size: 42px;
+    margin-top: 80px;
+    margin-bottom: 80px;
+    line-height: 45px; }
+  .huiFaPreduct .pagination1 {
+    position: absolute;
+    width: 100%;
+    z-index: 20;
+    left: 10px;
+    top: 400px; }
+  .huiFaPreduct .swiper-pagination-switch {
+    display: inline-block;
+    width: 22px;
+    height: 6px;
+    background: #fff;
+    margin: 0 5px;
+    opacity: 0.8;
+    cursor: pointer; }
+  .huiFaPreduct .swiper-active-switch {
+    background: #d2b701;
+    opacity: 0.9;
+    filter: alpha(opacity=90); }
+
+.news {
+  padding: 70px 0;
+  background: #fdfff7; }
+  .news .container h2 {
+    margin-bottom: 30px;
+    padding-left: 10px;
+    color: #d2b701;
+    font-size: 28px;
+    border-left: 4px solid #be0000; }
+  .news .container .tap {
+    margin-bottom: 40px; }
+    .news .container .tap li {
+      margin-right: 30px;
+      padding: 6px 12px;
+      font-size: 22px;
+      background: #f3f2f2; }
+      .news .container .tap li.active {
+        background: #d2b701;
+        color: #fff; }
+  .news .container .newsNum .newsList {
+    width: 30%;
+    border: 1px solid #bdbdbd;
+    background: #fff; }
+    .news .container .newsNum .newsList div {
+      width: 100%;
+      overflow: hidden; }
+      .news .container .newsNum .newsList div img {
+        width: 100%; }
+      .news .container .newsNum .newsList div h3 {
+        padding: 10px;
+        font-size: 18px; }
+      .news .container .newsNum .newsList div p {
+        padding: 0 10px 10px;
+        font-size: 14px; }
+      .news .container .newsNum .newsList div div {
+        margin-bottom: 10px;
+        margin-right: 10px;
+        background: #d2b701;
+        padding: 6px 12px;
+        width: 90px;
+        text-align: center; }
+        .news .container .newsNum .newsList div div a {
+          color: #fff; }
+    .news .container .newsNum .newsList:hover img {
+      transform: scale(1.2); }
+    .news .container .newsNum .newsList:hover h3 {
+      color: #d2b701; }
+  .news .container .second {
+    margin: 0 5%; }
+  .news .container .newsIndustry {
+    display: none; }
 
 /*# sourceMappingURL=index.css.map */
