--- a/css/index.scss
+++ b/css/index.scss
@@ -1,6 +1,7 @@
 @import "sassFn";
 @import "common";
 .banner{
+  margin-top: 100px;
   a,img{
     display: inline-block;
     width: 100%;
@@ -8,7 +9,7 @@
 }
 .swiper-container {
   width: 100%;
-  height: 250px;
+  height: 450px;
   color: #fff;
   text-align: center;
 }
@@ -70,4 +71,181 @@
 .swiper-active-switch {
   background: $mianColor;
   @include opacity(90);
+}
+
+.aboutHuifa{
+  background: $bgColor;
+  padding: 70px 0;
+  h2{
+    margin-bottom: 30px;
+    padding-left: 10px;
+    color: $mianColor;
+    font-size: 28px;
+    border-left: 4px solid #be0000;
+  }
+  .Word{
+    @extend %clearfix;
+    .left,.right{
+      float: left;
+      @extend %box-sizing;
+    }
+    .left{
+      width: 55%;
+      p{
+        text-indent: 36px;
+        font-size: 18px;
+        line-height: 35px;
+      }
+    }
+    .right{
+      width: 45%;
+      img{
+        padding-left: 30px;
+        @extend %box-sizing;
+        width: 100%;
+        max-width: 500px;
+      }
+    }
+  }
+}
+
+.huiFaPreduct{
+  background: url(../images/productBg.png) center no-repeat;
+  ul{
+    @extend %clearfix;
+    li{
+      width: 25%;
+      @extend %fl;
+      img{
+        max-width: 100%;
+      }
+    }
+  }
+  .container{
+    overflow: hidden;
+  }
+  .swiper-container1 {
+    //height: 250px;
+    position: relative;
+    color: #fff;
+    text-align: center;
+  }
+  .swiper-slide {
+    width: 500px;
+    height: 100%;
+  }
+  .swiper-slide .title {
+    font-style: italic;
+    font-size: 42px;
+    margin-top: 80px;
+    margin-bottom: 80px;
+    line-height: 45px;
+  }
+  .pagination1 {
+    position: absolute;
+    width: 100%;
+    z-index: 20;
+    left: 10px;
+    top:400px;
+  }
+  .swiper-pagination-switch {
+    display: inline-block;
+    width: 22px;
+    height: 6px;
+    //border-radius: 8px;
+    background: #fff;
+    margin: 0 5px;
+    opacity: 0.8;
+    //border: 1px solid #fff;
+    cursor: pointer;
+  }
+  .swiper-active-switch {
+    background: $mianColor;
+    @include opacity(90);
+  }
+
+}
+
+.news{
+  padding: 70px 0;
+  background: $bgColor;
+  .container{
+    h2{
+      margin-bottom: 30px;
+      padding-left: 10px;
+      color: $mianColor;
+      font-size: 28px;
+      border-left: 4px solid #be0000;
+    }
+    .tap{
+      margin-bottom: 40px;
+      @extend %clearfix;
+      li{
+        @extend %fl;
+        margin-right: 30px;
+        padding: 6px 12px;
+        font-size:  22px;
+        background: #f3f2f2;
+
+        &.active{
+          background: $mianColor;
+          color: #fff;
+        }
+      }
+    }
+    .newsNum{
+      @extend %clearfix;
+      .newsList{
+        width: 30%;
+        @extend %fl;
+        border: 1px solid $borderColor;
+        @extend %box-sizing;
+        background: #fff;
+
+        div{
+          @extend %clearfix;
+          width: 100%;
+          overflow: hidden;
+          img{
+            width: 100%;
+            @extend %transition;
+          }
+          h3{
+            padding: 10px;
+            font-size: 18px;
+          }
+          p{
+            padding: 0 10px 10px;
+            font-size: 14px;
+          }
+          div{
+            @extend %fr;
+            margin-bottom: 10px;
+            margin-right: 10px;
+            background: $mianColor;
+            padding: 6px 12px;
+            width: 90px;
+            text-align: center;
+            a{
+              color: #fff;
+            }
+          }
+        }
+        &:hover{
+          img{
+            transform: scale(1.2);
+          }
+          h3{
+            color: $mianColor;
+          }
+        }
+      }
+    }
+    .second{
+      margin: 0 5%;
+    }
+    .newsIndustry{
+      display: none;
+    }
+  }
 }
